# travel-maker-backend

./: .dockerignore  .gitattributes  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  PROJECT_PITCH.md  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  main.py  pyproject.toml
.claude/: AGENTS.md  CLAUDE.md  SYSTEM_DESIGN.md  plan.md
.github/: COMMIT_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  commit_template.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  ci-lint.yml  ci-test.yml  deploy.yml
apps/bookmark/: admin.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
apps/bookmark/migrations/: 0001_initial.py  0002_alter_bookmark_options_alter_bookmark_created_at_and_more.py
apps/bookmark/tests/: factories.py  test_bookmark.py
apps/core/: admin.py  cache.py  exception_handler.py  exceptions.py  permissions.py  s3.py  search.py  utils.py
apps/core/presigned_url/: constants.py  s3_handler.py  serializers.py  services.py  views.py
apps/core/tests/: test_presigned_url.py
apps/place/: AGENTS.md  admin.py  models.py  tasks.py  urls.py
apps/place/migrations/: 0001_initial.py  0002_alter_place_rating_avg.py  0003_tour_api_place_fields.py  0004_enable_pgvector.py  0005_placeinfo.py  0006_placefeature.py  0007_place_is_active_place_source_modified_at.py  0008_alter_placeinfo_accom_count_and_more.py  0009_add_hnsw_index_to_placefeature.py  0009_alter_place_options_alter_placefeature_options_and_more.py  0010_merge_0009_migrations.py  0011_place_place_active_rating_idx_and_more.py  0012_remove_placefeature_id_remove_placeinfo_id_and_more.py  0013_enable_pg_trgm.py  0014_place_name_trgm_gin_index.py  0015_place_view_count_placefeature_content_vector.py  0016_placefeature_place_content_vector_hnsw.py  0017_alter_placefeature_style_vector.py
apps/place/schemas/: admin_place_schemas.py  map_api_schemas.py  place_schemas.py  sort_algorithm_schemas.py  tag_schemas.py
apps/place/serializers/: admin_place_serializers.py  map_api_serializer.py  place_serializers.py  sort_algorithm_serializers.py  tag_serializers.py
apps/place/services/: admin_place_service.py  ai_tagging.py  embedding_service.py  eval_service.py  feed_stage_service.py  golden_sample.json  lcls_codes.json  lcls_codes.py  map_api_service.py  place_feature_dump_service.py  place_info_mapping.py  place_services.py  place_sync.py  sort_algorithm_service.py  tag_seeds.py  tag_services.py  tagging.py  tour_api.py
apps/place/tests/: conftest.py  factories.py  test_ai_tagging.py  test_embedding_service.py  test_eval_service.py  test_place.py  test_place_feature_dump.py  test_place_recommend_sort.py  test_place_sync.py  test_tag.py  test_tagging.py  test_tasks.py  test_tour_api.py
apps/place/views/: admin_place_views.py  config_views.py  map_api_views.py  place_views.py  sort_algorithm_views.py  tag_views.py
apps/review/: AGENTS.md  admin.py  exceptions.py  models.py  tasks.py  urls.py  views.py
apps/review/migrations/: 0001_initial.py  0002_review_image_url.py  0003_alter_review_options.py  0003_alter_review_options_alter_review_content_and_more.py  0004_merge_0003_migrations.py  0005_alter_review_options.py  0006_merge_20260608_1402.py  0006_review_route.py  0007_merge_0006_merge_20260608_1402_0006_review_route.py
apps/review/schemas/: admin_review_schemas.py  review_schemas.py
apps/review/serializers/: admin_review_serializers.py  review_serializers.py
apps/review/services/: admin_review_service.py  review_services.py
apps/review/tests/: factories.py  test_reviews.py
apps/review/views/: admin_review_views.py  review_views.py
apps/route/: AGENTS.md  admin.py  apps.py  exceptions.py  models.py  urls.py
apps/route/migrations/: 0001_initial.py  0002_alter_routeday_day_index_max_3.py
apps/route/schemas/: route_schemas.py
apps/route/serializers/: route_serializers.py
apps/route/services/: route_services.py
apps/route/tests/: factories.py  test_route.py
apps/route/views/: route_views.py
apps/share/: exceptions.py  urls.py
apps/share/schemas/: share_schemas.py
apps/share/serializers/: share_serializers.py
apps/share/services/: share_services.py
apps/share/tests/: factories.py  test_share.py
apps/share/views/: share_views.py
apps/travel_quiz/: admin.py  agents.md  apps.py  exceptions.py  models.py  urls.py
apps/travel_quiz/migrations/: 0001_initial.py  0002_alter_traveltype_options_and_more.py  0003_alter_usertestresult_unique_together_and_more.py  0004_traveltype_description_traveltype_image_url_and_more.py  0005_alter_traveltype_description_and_more.py  0006_remove_traveltype_tags.py  0007_remove_traveltype_description.py  0008_alter_usertestresult_travel_type.py
apps/travel_quiz/schemas/: travel_quiz_schemas.py
apps/travel_quiz/serializers/: travel_quiz_serializers.py
apps/travel_quiz/services/: compatibility_data.py  compatibility_messages.py  (+3 more)
apps/user/: admin.py  agents.md  apps.py  authentication.py  models.py  tasks.py  tests.py
apps/users/: apps.py  models.py  tests.py
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  local.py  prod.py
docs/: ard.md  behavior_feed_plan.md  code_review.md  embedding_recommendation_plan.md  eval_baseline_results.md  feature_description.md  flowchart.html  place_commands_guide.md  planner_feed_mockup.html  planner_flowchart.html  recommend_pagination_frontend.md  recommend_sort.md  review_board_mockup.html  search.md  start_test.md  step7_incremental_sync.md  system_flow.md  tour_api_sync_spec.md
dumps/: RESTORE.md
envs/: .env.local
infrastructure/docker/: Dockerfile  Dockerfile.celery  docker-compose.build.yml  docker-compose.prod.yml  docker-compose.yml
infrastructure/nginx/: nginx.conf
infrastructure/scripts/: dump_place_data.sh  entrypoint.sh  run-tests.sh  wait-for-it.sh
static/: vector_chart.js
test_frontend/: console.html  index.html  map.html  place.html  place_detail.html  social-callback.html  withdrawal.html
test_frontend/auth/: callback.html
test_frontend/social-callback/: index.html
(+65 files in other folders)
