[project]
name = "travel-maker-backend"
version = "0.1.0"
description = "AI-powered travel recommendation platform"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.3",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "psycopg[binary]>=3.1.0",
    "python-decouple>=3.8",
    "django-cors-headers>=4.3.0",
    "pillow>=10.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "gunicorn>=21.0.0",
    "drf-spectacular>=0.29.0",
    "django-stubs>=5.1.1",
    "pytest>=9.0.3",
    "factory-boy>=3.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "factory-boy>=3.3.0",
    "ruff>=0.1.0",
    "mypy==1.13.0",
    "django-stubs==5.1.1",
    "djangorestframework-stubs>=3.14.0",
    "django-stubs-ext>=4.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

# Ruff 설정
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/*.py" = ["E501"]

# mypy 설정
[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = true
warn_unused_ignores = false  # ← 추가
ignore_missing_imports = true

[tool.django-stubs]  # ← 추가!
django_settings_module = "config.settings.local"

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "decouple",
    "sentry_sdk.*",
    "debug_toolbar.*",
]
ignore_missing_imports = true

# pytest 설정
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--reuse-db",
    "--cov=apps",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]
testpaths = ["apps", "tests"]

# Coverage 설정
[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.6.0",
]
